# YaleBrainAtlas

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  yba.toml
data/: ParcelNames.txt  YBA_surfaces_full.vtp
modules/: visualizer.py
src/: parcel.py  tract.py  yba.py
src/YaleBrainAtlas/: __init__.py  attributes.py  parcel.py  tract.py  yba.py
src/YaleBrainAtlas/data/: TractNames.txt
src/YaleBrainAtlas/modules/: visualizer.py
