[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "YaleBrainAtlas"
version = "0.0.1"
description = "An unofficial, work-in-progress library for analysis and visualization of the Yale Brain Atlas"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Ryan Bose-Roy", email = "ryansbroy@gmail.com" }
]

license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "pyvista",
  "trimesh",
  "torch",
  "h5py",
  "scipy",
  "plotly",
  "seaborn",
  "kaleido==0.2.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/YaleBrainAtlas"]